[gd_scene load_steps=7 format=2]

[ext_resource path="res://new_texture/forest elements.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Tree.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HurtBox.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 4, 10, 24, 36 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3.5, 4.5 )

[node name="Tree" type="StaticBody2D" groups=["trees"]]
position = Vector2( 189, 111 )
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12.5 )
texture = SubResource( 3 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 2 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -8, -2, -6, -9, -4, -14, -4, -19, -1, -23, 0, -25, 2, -23, 4, -19, 5, -14, 8, -9, 7, -1, 4, 1, -4, 0 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
